# cpp_17_features

./: meson.build
include/: first_class.hpp
src/: class_template_argument_deduction.cpp  constexpr_lambda.cpp  first_class.cpp  folding_expressions.cpp  if_constexpr.cpp  if_statement_initializers.cpp  inline_variables.cpp  lambda_this_by_value.cpp  lib_features.cpp  structured_binding.cpp
